--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    ext.exoplayer_version= "2.18.0"
+    ext.exoplayer_version= "2.16.1"
     api "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     api "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     api "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
-    api 'com.google.android.exoplayer:extension-ima:2.11.1'
+    //api 'com.google.android.exoplayer:extension-ima:2.11.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
