--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
 }
 
 dependencies {
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
+
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation files('C:\\Users\\mtv\\Desktop\\PallyConSDK\\Sample\\advanced\\app\\libs\\PallyconWVMSDK.aar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -44,5 +50,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
-    implementation 'mbanje.kurt:fabbutton:1.2.4@aar'
+//    implementation 'mbanje.kurt:fabbutton:1.2.4@aar'
+
+//    implementation(name:'PallyconWVMSDK', ext:'aar')
 }
