--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,12 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'org.jsoup:jsoup:1.10.3'
+    implementation 'com.android.support:multidex:1.0.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
