--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
     api "com.google.android.exoplayer:exoplayer-dash:$exoplayer_version"
     //api 'com.google.android.exoplayer:extension-ima:2.11.1'
+    implementation 'com.google.android.exoplayer:extension-ima:2.16.1'
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
