--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,11 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.kezong:fat-aar:1.3.8'
     }
 }
 plugins {
