--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,11 @@ android {
         javaMaxHeapSize "4g"
     }*/
 }
-repositories {
+/*repositories {
     flatDir {
         dirs 'libs/'
     }
-}
+}*/
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
