--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <meta-data android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
-        android:value="com.google.android.exoplayer2.ext.cast.DefaultCastOptionsProvider"/>
+        android:value="com.multitv.ott.multitvvideoplayer.providers.CastOptionsProvider"/>
 
     <application
         android:name=".VideoPlayerAppController"
