--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+   // id 'maven-publish'
 }
 apply plugin: 'com.kezong.fat-aar'
 apply plugin: 'kotlin-android'
