--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
     implementation "com.google.android.exoplayer:exoplayer-dash:$exoplayer_version"
     implementation "com.google.android.exoplayer:extension-cronet:2.14.0"
+    implementation 'com.google.android.exoplayer:extension-mediasession:2.16.1'
 
     //api 'com.google.android.exoplayer:extension-ima:2.11.1'
     implementation 'com.google.android.exoplayer:extension-ima:2.16.1'
