--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,5 @@ include ':drmsdk'
         substitute module('com.github.kezong:fat-aar') using project(':')
     }
 }*/
+include ':previewseekbar'
+include ':previewseekbar-exoplayer'
