--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,9 @@ dependencies {
     implementation 'com.google.android.exoplayer:extension-ima:2.16.1'
 
 
-
+    implementation 'com.conviva.sdk:conviva-core-sdk:4.0.28'
+    implementation 'com.conviva.sdk:conviva-exoplayer-sdk:4.0.10'
+    implementation 'com.conviva.sdk:conviva-ima-sdk:4.0.3'
 
 
     implementation 'com.android.volley:volley:1.2.1'
