--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,13 +68,13 @@ dependencies {
     implementation "com.google.android.exoplayer:extension-cronet:2.14.0"
     implementation 'com.google.android.exoplayer:extension-mediasession:2.16.1'
 
-    //api 'com.google.android.exoplayer:extension-ima:2.11.1'
+    //api 'com.google.android.exoplayer:extension-ima:2.11.1'"
     implementation 'com.google.android.exoplayer:extension-ima:2.16.1'
 
 
     implementation 'com.conviva.sdk:conviva-core-sdk:4.0.28'
     implementation 'com.conviva.sdk:conviva-exoplayer-sdk:4.0.10'
-    implementation 'com.conviva.sdk:conviva-ima-sdk:4.0.3'
+    implementation 'com.conviva.sdk:conviva-ima-sdk:4.0.5'
 
 
     implementation 'com.android.volley:volley:1.2.1'
